--- a/svc/hecate/src/components/hud/hud.module.scss
+++ b/svc/hecate/src/components/hud/hud.module.scss
@@ -3333,6 +3333,10 @@ $light-shadow: rgba(0, 0, 0, 0.1);
   width: 100%;
   height: 100%;
   background: transparent;
+  background-image: url('/bg_with_logo.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   position: relative;
 }
 
