--- a/svc/hecate/src/components/hud/hud.module.scss
+++ b/svc/hecate/src/components/hud/hud.module.scss
@@ -3333,17 +3333,29 @@ $light-shadow: rgba(0, 0, 0, 0.1);
   width: 100%;
   height: 100%;
   background: transparent;
+  position: relative;
+}
+
+.canvasBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url('/bg_with_logo.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  position: relative;
+  z-index: -1;
+  pointer-events: none;
 }
 
 .canvasEmpty {
   text-align: center;
   opacity: 0.3;
   user-select: none;
+  position: relative;
+  z-index: 1;
 }
 
 .canvasMessage {
