--- a/svc/hecate/src/components/crossroads/crossroads.module.scss
+++ b/svc/hecate/src/components/crossroads/crossroads.module.scss
@@ -50,18 +50,13 @@ $category-model: #ec4899;
 // Landing View
 .landingView {
   width: 100%;
-  padding: 2rem 1.5rem;
-  overflow-y: auto;
-  overflow-x: hidden;
+  padding: 0;
+  overflow: hidden;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
-
-  @media (max-width: 768px) {
-    padding: 1.5rem 1rem;
-  }
 
   > * {
     max-width: 1200px;
@@ -186,13 +181,13 @@ $category-model: #ec4899;
   align-items: center;
   padding: 2rem;
   padding-top: 0;
-  padding-bottom: 3rem;
+  padding-bottom: 5rem;
 
   @media (max-width: 768px) {
     min-height: calc(100vh - 80px);
     padding: 1rem;
     padding-top: 0;
-    padding-bottom: 2rem;
+    padding-bottom: 3rem;
   }
 }
 
