--- a/svc/hecate/src/components/hud/hud.module.scss
+++ b/svc/hecate/src/components/hud/hud.module.scss
@@ -4211,6 +4211,21 @@ $light-shadow: rgba(0, 0, 0, 0.1);
   }
 }
 
+// Remove fog overlays for all logged-in states
+.echoContainer:not(.loggedOut) {
+  &::before,
+  &::after {
+    display: none !important;
+  }
+
+  .unifiedNavbar {
+    &::before,
+    &::after {
+      display: none !important;
+    }
+  }
+}
+
 // Null theme overrides for matrix-style green
 .echoContainer.null {
   .hudScreen {
